# serializer version: 1
# name: test_constant_cement_model
  tuple(
    '''
      [6.00209607e+03 5.42471419e+03 5.00092517e+03 4.66911235e+03
       4.39805547e+03 4.16990514e+03 3.97354938e+03 3.80161939e+03
       3.64898499e+03 3.51193414e+03 3.38769544e+03 3.27414539e+03
       3.16962078e+03 3.07279418e+03 2.98258850e+03 2.89811688e+03
       2.81863939e+03 NaN NaN NaN]
    ''',
    '''
      [4.07477283e+03 3.55878306e+03 3.19120336e+03 2.91132094e+03
       2.68830034e+03 2.50459087e+03 2.34936499e+03 2.21552753e+03
       2.09820508e+03 1.99392094e+03 1.90011568e+03 1.81485426e+03
       1.73663947e+03 1.66428876e+03 1.59685041e+03 1.53354492e+03
       1.47372292e+03 NaN NaN NaN]
    ''',
    '''
      [2.65000000e+03 2.61103947e+03 2.57207895e+03 2.53311842e+03
       2.49415789e+03 2.45519737e+03 2.41623684e+03 2.37727632e+03
       2.33831579e+03 2.29935526e+03 2.26039474e+03 2.22143421e+03
       2.18247368e+03 2.14351316e+03 2.10455263e+03 2.06559211e+03
       2.02663158e+03 1.98767105e+03 1.94871053e+03 1.90975000e+03]
    ''',
    '''
      [1.59055546e+07 1.41641429e+07 1.28627743e+07 1.18274145e+07
       1.09694448e+07 1.02379401e+07 9.60103641e+06 9.03749974e+06
       8.53247923e+06 8.07518425e+06 7.65752895e+06 7.27329858e+06
       6.91761395e+06 6.58657476e+06 6.27701447e+06 5.98632735e+06
       5.71234360e+06 NaN NaN NaN]
    ''',
    '''
      [1.47298913e+00 1.52431719e+00 1.56709699e+00 1.60377796e+00
       1.63599856e+00 1.66490471e+00 1.69132910e+00 1.71589806e+00
       1.73909835e+00 1.76132066e+00 1.78288905e+00 1.80408172e+00
       1.82514612e+00 1.84631073e+00 1.86779456e+00 1.88981545e+00
       1.91259793e+00 NaN NaN NaN]
    ''',
  )
# ---
# name: test_constant_cement_model_dry
  tuple(
    '''
      [3.68000000e+10 3.03797554e+10 2.56558353e+10 2.20343990e+10
       1.91698259e+10 1.68472930e+10 1.49262491e+10 1.33108705e+10
       1.19335799e+10 1.07453529e+10 9.70976021e+09 8.79916668e+09
       7.99222876e+09 7.27220043e+09 6.62575853e+09 6.04217075e+09
       5.51269505e+09 NaN NaN NaN]
    ''',
    '''
      [4.40000000e+10 3.30686501e+10 2.61934832e+10 2.14701789e+10
       1.80251761e+10 1.54013928e+10 1.33364576e+10 1.16690087e+10
       1.02943524e+10 9.14159437e+09 8.16101865e+09 7.31672895e+09
       6.58215873e+09 5.93722507e+09 5.36646447e+09 4.85777692e+09
       4.40155851e+09 NaN NaN NaN]
    ''',
  )
# ---
# name: test_constant_cement_model_high_phi
  tuple(
    '''
      [6.00209607e+03 5.51716635e+03 5.13895988e+03 4.83040126e+03
       4.57053247e+03 4.34643840e+03 4.14963016e+03 3.97424204e+03
       3.81605589e+03 3.67193768e+03 3.53949465e+03 3.41685707e+03
       3.30253433e+03 3.19531675e+03 3.09420684e+03 NaN NaN NaN NaN NaN]
    ''',
    '''
      [4.07477283e+03 3.64227005e+03 3.31272328e+03 3.04973724e+03
       2.83266248e+03 2.64878663e+03 2.48979097e+03 2.34996626e+03
       2.22524055e+03 2.11261540e+03 2.00982180e+03 1.91510121e+03
       1.82706100e+03 1.74457601e+03 1.66671953e+03 NaN NaN NaN NaN NaN]
    ''',
    '''
      [2.65000000e+03 2.61536842e+03 2.58073684e+03 2.54610526e+03
       2.51147368e+03 2.47684211e+03 2.44221053e+03 2.40757895e+03
       2.37294737e+03 2.33831579e+03 2.30368421e+03 2.26905263e+03
       2.23442105e+03 2.19978947e+03 2.16515789e+03 2.13052632e+03
       2.09589474e+03 2.06126316e+03 2.02663158e+03 1.99200000e+03]
    ''',
    '''
      [1.59055546e+07 1.44294227e+07 1.32623031e+07 1.22987101e+07
       1.14787720e+07 1.07654416e+07 1.01342704e+07 9.56830148e+06
       9.05529978e+06 8.58614987e+06 8.15387793e+06 7.75302853e+06
       7.37925224e+06 7.02902415e+06 6.69944637e+06 NaN NaN NaN NaN NaN]
    ''',
    '''
      [1.47298913e+00 1.51476038e+00 1.55127955e+00 1.58387457e+00
       1.61351114e+00 1.64091677e+00 1.66665805e+00 1.69119111e+00
       1.71489590e+00 1.73810041e+00 1.76109874e+00 1.78416527e+00
       1.80756654e+00 1.83157211e+00 1.85646523e+00 NaN NaN NaN NaN NaN]
    ''',
  )
# ---
# name: test_constant_cement_model_high_phi_extrapolate
  tuple(
    '''
      [6.00209607e+03 5.51716635e+03 5.13895988e+03 4.83040126e+03
       4.57053247e+03 4.34643840e+03 4.14963016e+03 3.97424204e+03
       3.81605589e+03 3.67193768e+03 3.53949465e+03 3.41685707e+03
       3.30253433e+03 3.19531675e+03 3.09420684e+03 2.99836992e+03
       2.90709786e+03 2.81978193e+03 2.73589200e+03 2.65496042e+03]
    ''',
    '''
      [4.07477283e+03 3.64227005e+03 3.31272328e+03 3.04973724e+03
       2.83266248e+03 2.64878663e+03 2.48979097e+03 2.34996626e+03
       2.22524055e+03 2.11261540e+03 2.00982180e+03 1.91510121e+03
       1.82706100e+03 1.74457601e+03 1.66671953e+03 1.59271354e+03
       1.52189189e+03 1.45367210e+03 1.38753310e+03 1.32299675e+03]
    ''',
    '''
      [2.65000000e+03 2.61536842e+03 2.58073684e+03 2.54610526e+03
       2.51147368e+03 2.47684211e+03 2.44221053e+03 2.40757895e+03
       2.37294737e+03 2.33831579e+03 2.30368421e+03 2.26905263e+03
       2.23442105e+03 2.19978947e+03 2.16515789e+03 2.13052632e+03
       2.09589474e+03 2.06126316e+03 2.02663158e+03 1.99200000e+03]
    ''',
    '''
      [1.59055546e+07 1.44294227e+07 1.32623031e+07 1.22987101e+07
       1.14787720e+07 1.07654416e+07 1.01342704e+07 9.56830148e+06
       9.05529978e+06 8.58614987e+06 8.15387793e+06 7.75302853e+06
       7.37925224e+06 7.02902415e+06 6.69944637e+06 6.38810602e+06
       6.09297111e+06 5.81231260e+06 5.54464512e+06 5.28868116e+06]
    ''',
    '''
      [1.47298913e+00 1.51476038e+00 1.55127955e+00 1.58387457e+00
       1.61351114e+00 1.64091677e+00 1.66665805e+00 1.69119111e+00
       1.71489590e+00 1.73810041e+00 1.76109874e+00 1.78416527e+00
       1.80756654e+00 1.83157211e+00 1.85646523e+00 1.88255442e+00
       1.91018683e+00 1.93976476e+00 1.97176701e+00 2.00677773e+00]
    ''',
  )
# ---
